==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

- Table functions no longer require any permissions to be used. (Enterprise
  only)

Fixes
=====

- Fixed incorrect HTTP responses on the BLOB API of subsequent requests after
  an error response occurred, e.g. 404 Not Found.

- Fixed an issue that caused ``ANY`` to not work correctly on nested arrays.

- Fixed an issue that would cause a NullPointerException to be thrown when
  executing an ``EXPLAIN`` statement for a ``CROSS JOIN``.