@@ -95,6 +95,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
+import java.util.Map;
 import java.util.Optional;
 
 @SuppressWarnings("OptionalUsedAsFieldOrParameterType")
@@ -269,10 +270,19 @@ public class RelationAnalyzer extends DefaultTraversalVisitor<AnalyzedRelation, 
     @Override
     protected AnalyzedRelation visitQuerySpecification(QuerySpecification node, StatementAnalysisContext statementContext) {
         List<Relation> from = node.getFrom().isEmpty() ? EMPTY_ROW_TABLE_RELATION : node.getFrom();
-        statementContext.startRelation();
+        RelationAnalysisContext currentRelationContext = statementContext.startRelation();
 
         for (Relation relation : from) {
+            // different from relations have to be isolated from each other
+            RelationAnalysisContext innerContext = statementContext.startRelation();
             process(relation, statementContext);
+            statementContext.endRelation();
+            for (Map.Entry<QualifiedName, AnalyzedRelation> entry : innerContext.sources().entrySet()) {
+                currentRelationContext.addSourceRelation(entry.getKey(), entry.getValue());
+            }
+            for (JoinPair joinPair : innerContext.joinPairs()) {
+                currentRelationContext.addJoinPair(joinPair);
+            }
         }
 
         RelationAnalysisContext context = statementContext.currentRelationContext();
